--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -51,3 +51,11 @@ jobs:
         with:
           name: lint-report
           path: android/app/build/reports/lint-results-debug.html
+
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: FFinder APK Debug Build
+          path: android/app/build/outputs/apk/debug/app-debug.apk
+          if-no-files-found: error
+          retention-days: 14
